--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,21 +2,26 @@
 @import "reset.scss";
 @import "color.scss";
 @import "main.scss";
+@import "subIndex.scss";
+@import "member.scss";
+@import "community.scss";
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Faustina:wght@600&display=swap");
 // 'DM Serif Display';
 // 'Faustina';
+
+body {
+	background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/567707/paper_fibers.png) repeat;
 	a {
 		h1 {
-			height: 100%;
 			font: bold 60px/1 "DM Serif Display";
-			color: #000;
+			color: $navy;
 			text-align: center;
 			margin-top: 100px;
+			z-index: 3;
 		}
 		main {
 			width: 100%;
 			height: 100%;
-			background: #000;
 			article {
 				width: 100%;
 				height: 50vh;
@@ -31,3 +36,4 @@
 			}
 		}
 	}
+}
